--- a/index.html
+++ b/index.html
@@ -120,7 +120,16 @@
                         <p>We have presented our work on "Improving SC Roads Using Insights from DoT Traffic Data" to South Carolina Department of Health and Environmental Control (DHEC), South Carolina Department of Public Safety (SCDPS), National Safety Council Southeastern Chapter (NSCSC). For more details <a href="https://ai4society.github.io/projects/traffic_page/index.html">click here.</a> </p>
                         <p>Nitin Gupta, pursuing his bachelor's at University of South Carolina, has joined us as an Undergraduate Researcher.</p>
                         <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> finished his summer internship at IBM Research.</p>
-                        
+                        <div class="patent-section">
+                          <div class="patent-text">
+                              <p><strong>First patent of AI4Society issued!</strong> We are pleased to share that our patent titled "<em><a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12067983">US 12,067,983 – Robust useful and general task-oriented virtual assistants</a></em>" [tags: chatbot monitoring, execution] has been officially issued by USPTO.</p>
+                          </div>                    
+                          <div class="patent-frame">
+                              <a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12067983" target="_blank">
+                                  <img src="images/patent1.png" alt="First Page of Patent" class="patent-image">
+                              </a>
+                          </div>
+                        </div>
                       </div>
                     </div>
 
