update members page

--- a/members/index.html
+++ b/members/index.html
@@ -189,6 +189,23 @@
                             <br><br>
                         </figcaption>
 
+                        <img src="images_members/vansh.jpg">
+                        <figcaption style="padding-top: -10%;">
+                            <b>Vansh Nagpal</b><br><br>
+                            <a target="_blank" href="https://vnagpal25.github.io/">Homepage</a>,
+                            <a target="_blank" href="mailto:vnagpal@email.sc.edu">vnagpal@email.sc.edu</a>
+                            <br><br>
+                            Research Interests:
+                            <span class="tag tag-method">Recommender Systems</span>,
+                            <span class="tag tag-method">Chatbots</span>,
+                            <span class="tag tag-method">Neuro-Symbolic AI</span>
+                            <br><br>
+                            Domains:
+                            <span class="tag tag-domain">Public Health</span>,
+                            <span class="tag tag-domain">Water</span>
+                            <br><br>
+                        </figcaption>
+
                         <!--Leave this in as placeholder.-->
                         <!-- <figcaption style="padding-top: -10%;">
                             &nbsp
