added InfoSpread project page

--- a/projects/index.html
+++ b/projects/index.html
@@ -220,6 +220,25 @@
                 <tr>
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                         <h3 style="display:flex;align-items:center;">
+                            <span style="background-color:hsl(15, 77%, 51%);height:15px;width:15px;margin-right:10px;border:1px solid black;"></span>
+                            Planning in Opinion Networks
+
+                            <!-- <span class="tag tag-method">Time-Series</span> -->
+                            <span class="tag tag-method">Planning</span>
+                        </h3>
+                        <i><b>Team: </b>Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns</i>
+                         <!-- <i><b>Team: </b>University of South Carolina, South Carolina Department of Health and Environmental Control (DHEC), South Carolina Department of Public Safety (SCDPS), National Safety Council Southeastern Chapter (NSCSC)</i> -->
+                        <p><b>Description: </b>This project focuses on understanding and influencing information spread and opinion formation within networks by integrating the principles from Opinion Dynamics and Automated Planning.</p>
+                            <span>
+                                <a style="background-color: #3498db; color: white; padding: 2px 3px; text-decoration: none; border-radius: 4px; margin: 5px 0; display: inline-block;" href="./InfoSpread/index.html" target="_blank"><b>More Details</b></a>
+                            </span>
+                        
+                    </td>
+                </tr>
+
+                <tr>
+                    <td style="padding-left:2.5%;width:63%;vertical-align:middle">
+                        <h3 style="display:flex;align-items:center;">
                             <span style="background-color:hsl(95, 99%, 35%);height:15px;width:15px;margin-right:10px;border:1px solid black;"></span>
                             Traffic Data Analysis
 
