--- a/patents/index.html
+++ b/patents/index.html
@@ -63,12 +63,12 @@
                         <em>Biplav Srivastava, Vishal Pallagani, Bharath C Muppasani</em>
                     </li>
                     <li>
-                        <strong>USC 1589</strong>
+                        <strong>USC 1589, US-20240291795-A1</strong>
                         System to Mediate Social Media Platforms Automatically for User Safety, Feb 24th, 2022<br>
                         <em>Manas Gaur, Biplav Srivastava</em>
                     </li>
                     <li>
-                        <strong>USC 1617</strong>
+                        <strong>USC 1617, US-20240062079-A1</strong>
                         Assigning Trust Rating to AI Services Using Causal Impact Analysis, Aug 10th, 2022<br>
                         <em>Kausik Lakkaraju, Biplav Srivastava, Marco Valtorta</em>
                     </li>
@@ -83,12 +83,12 @@
                         <em>Biplav Srivastava, Kausik Lakkaraju, Revathy Venkataramanan, Vishal Pallagani, Vedant Khandelwal, Joey Yip</em>
                     </li>
                     <li>
-                        <strong>USC 1530</strong>
+                        <strong>USC 1530, US-20230112486-A1</strong>
                         Building Teams for Request for Proposals<br>
                         <em>Biplav Srivastava, Tarmo Koppel, Michael Huhns, Michael Mathews, Paul Ziehl, Danielle Mcelwain</em>
                     </li>
                     <li>
-                        <strong>20220171848 - USC 1490</strong>
+                        <strong>USC 1490, US-20220171848-A1</strong>
                         Synthena: A Method for Synthesizing Dynamic Ensemble-Based Defenses to Counter Adversarial Attacks<br>
                         <em>Biplav Srivastava, Ying Meng, Jianhai Su, Pooyan Jamshidi Dermani, Jason M. O’Kane</em>
                     </li>
