--- a/news-journal/index.html
+++ b/news-journal/index.html
@@ -50,31 +50,69 @@
               <div class="newsjournal-dot"></div>
               <div class="newsjournal-year">2024</div>
             </div>
-            
+
+            <!--Aug 2024-->
+            <div class="timeline-item">
+              <div class="timeline-dot"></div>
+              <div class="timeline-date month">August</div>
+              <div class="timeline-content">
+                <p><strong>First patent of AI4Society issued!</strong> We are pleased to share that our patent titled
+                  "<em><a href="https://image-ppubs.uspto.gov/dirsearch-public/print/downloadPdf/12067983">US 12,067,983
+                      – Robust useful and general task-oriented virtual assistants</a></em>" [tags: chatbot monitoring,
+                  execution] has been officially issued by USPTO.
+                </p>
+                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> finished his
+                  summer internship at IBM Research.</p>
+                <p><a href="https://www.linkedin.com/in/niting9/" target="_blank">Nitin Gupta</a>, pursuing his
+                  bachelor's at University of South Carolina, has joined us as an Undergraduate Researcher.</p>
+                <p>Our paper "AI-Assisted Research Collaboration with Open Data for Fair and Effective Response to
+                  Call for Proposals", an extension of our previous work at <a
+                    href="https://ai4society.github.io/publications/papers_local/ULTRA-IAAI_AAAI2024_Deployed_Application_Track.pdf">
+                    IAAI-24</a>, is published at AI Magazine, AAAI-2024.</p>
+                <p>We have presented our work on "Improving SC Roads Using Insights from DoT Traffic Data" to South
+                  Carolina Department of Health and Environmental Control (DHEC), South Carolina Department of Public
+                  Safety (SCDPS), National Safety Council Southeastern Chapter (NSCSC). For more details, <a
+                    href="https://ai4society.github.io/projects/traffic_page/index.html">click here.</a> </p>
+
+
+                </ul>
+                </p>
+              </div>
+            </div>
             <!-- May 2024 -->
             <div class="timeline-item">
               <div class="timeline-dot"></div>
               <div class="timeline-date month">May</div>
               <div class="timeline-content">
-                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> started his summer internship at IBM Research, where he will be working on selective state space models and sequential decision making.</p>
-                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the International Conference on Automated Planning and Scheduling <a href="https://icaps24.icaps-conference.org/">(ICAPS)</a> from June 1st to June 7th.
+                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> started his
+                  summer internship at IBM Research, where he will be working on selective state space models and
+                  sequential decision making.</p>
+                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at
+                  the International Conference on Automated Planning and Scheduling <a
+                    href="https://icaps24.icaps-conference.org/">(ICAPS)</a> from June 1st to June 7th.
                 <ul>
-                  <li> 
-                    A position paper on <a href="https://arxiv.org/abs/2401.02500" target="_blank">'On the Prospects of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling (APS)'</a>
+                  <li>
+                    A position paper on <a href="https://arxiv.org/abs/2401.02500" target="_blank">'On the Prospects
+                      of Incorporating Large Language Models (LLMs) in Automated Planning and Scheduling (APS)'</a>
                   </li>
 
-                  <li>A paper on <a
-                    href="https://openreview.net/pdf?id=jxsnASl4fX"
-                    target="_blank">'The Case for Developing a Foundation Model for Planning-like Tasks from Scratch'</a>. at Planning and Reinforcement Learning <a href="https://icaps24.icaps-conference.org/program/workshops/prl/" target="_blank">(PRL)</a> Workshop</li>
+                  <li>A paper on <a href="https://openreview.net/pdf?id=jxsnASl4fX" target="_blank">'The Case for
+                      Developing a Foundation Model for Planning-like Tasks from Scratch'</a>. at Planning and
+                    Reinforcement Learning <a href="https://icaps24.icaps-conference.org/program/workshops/prl/"
+                      target="_blank">(PRL)</a> Workshop</li>
 
-                    <li>A paper on <a
+                  <li>A paper on <a
                       href="https://ai4society.github.io/publications/papers_local/Rubik_s_Cube___HSDIP_camera_submission.pdf"
-                      target="_blank">'Comparing Rubik's Cube Solvability in Domain-Independent Planners Using Standard Planning Representations for Insights and Synergy with Upcoming Learning Methods'</a>. at Heuristics and Search for Domain-Independent Planning <a href="https://icaps24.icaps-conference.org/program/workshops/hsdip/" target="_blank">(HSDIP)</a> Workshop</li>
+                      target="_blank">'Comparing Rubik's Cube Solvability in Domain-Independent Planners Using
+                      Standard Planning Representations for Insights and Synergy with Upcoming Learning Methods'</a>.
+                    at Heuristics and Search for Domain-Independent Planning <a
+                      href="https://icaps24.icaps-conference.org/program/workshops/hsdip/" target="_blank">(HSDIP)</a>
+                    Workshop</li>
 
                   <li>A demonstration paper on <a
-                    href="https://ai4society.github.io/publications/papers_local/RC_ICAPS_24_Demo.pdf"
-                    target="_blank">'Solving the Rubik's Cube with a PDDL Planner'</a>.</li>
-                  
+                      href="https://ai4society.github.io/publications/papers_local/RC_ICAPS_24_Demo.pdf"
+                      target="_blank">'Solving the Rubik's Cube with a PDDL Planner'</a>.</li>
+
                 </ul>
                 </p>
               </div>
@@ -85,7 +123,9 @@
               <!-- March 2024 -->
               <div class="newsjournal-month">April</div>
               <div class="newsjournal-content">
-                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://sc.edu/about/signature_events/discover_uofsc/index.php">Discover USC</a> event on April 19th.</p>
+                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at
+                  the upcoming <a href="https://sc.edu/about/signature_events/discover_uofsc/index.php">Discover
+                    USC</a> event on April 19th.</p>
               </div>
             </div>
 
@@ -93,7 +133,9 @@
               <!-- March 2024 -->
               <div class="newsjournal-month">March</div>
               <div class="newsjournal-content">
-                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at the upcoming <a href="https://cse.sc.edu/event/cse-research-symposium-2024">CSE Research Symposium</a> on March 15th.</p>
+                <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> will present their work at
+                  the upcoming <a href="https://cse.sc.edu/event/cse-research-symposium-2024">CSE Research
+                    Symposium</a> on March 15th.</p>
               </div>
             </div>
 
@@ -103,10 +145,10 @@
               <div class="newsjournal-month">February</div>
               <div class="newsjournal-content">
                 <p>Our <a href="https://ai4society.github.io/" target="_blank">group</a> was involved at the
-                  premier AI conference, <a href="https://aaai.org/aaai-conference/program-overview/">AAAI 2024</a>, with:
+                  premier AI conference, <a href="https://aaai.org/aaai-conference/program-overview/">AAAI 2024</a>,
+                  with:
                 <ul>
-                  <li>A tutorial on <a
-                      href="https://aaai.org/aaai-conference/aaai-24-tutorial-and-lab-list/#lq02"
+                  <li>A tutorial on <a href="https://aaai.org/aaai-conference/aaai-24-tutorial-and-lab-list/#lq02"
                       target="_blank">'Harnessing Large Language Models for Planning: A Lab on Strategies for
                       Success and Mitigation of Pitfalls during that time'</a> on Feb 21st.</li>
 
@@ -115,11 +157,12 @@
                       target="_blank">'Artificial Intelligence for Design Problems'</a> bridge program on Feb
                     21st.</li>
 
-                  <li>A paper on deployed application: <a
-                      href="https://aaai.org/aaai-conference/iaai-24-program/" target="_blank">'Promoting
+                  <li>A paper on deployed application: <a href="https://aaai.org/aaai-conference/iaai-24-program/"
+                      target="_blank">'Promoting
                       Research Collaboration with Open Data Driven
                       Team Recommendation in Response to Call for Proposals'</a> on Feb 22nd. Presented with the
-                    <strong>Deployed Application Award</strong>.</li>
+                    <strong>Deployed Application Award</strong>.
+                  </li>
 
                   <li>A demonstration paper on <a
                       href="https://ai4society.github.io/publications/papers_local/InfoSpread_AAAI24_Demo.pdf"
@@ -131,14 +174,16 @@
                       Credible Elections: A Call To Action with Trusted AI'</a> on Feb 26th.</li>
                 </ul>
                 </p>
-                <p>Our group has lead the University of South Carolina in getting itself included as a collaborator with the
-                  <a href="https://www.nist.gov/">National Institute of Standards and Technology</a> (NIST) for the Artificial Intelligence Safety
+                <p>Our group has lead the University of South Carolina in getting itself included as a collaborator
+                  with the
+                  <a href="https://www.nist.gov/">National Institute of Standards and Technology</a> (NIST) for the
+                  Artificial Intelligence Safety
                   Institute Consortium (AISIC).
-                  [<a
-                    href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute"
+                  [<a href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute"
                     target="_blank">announcement</a>, <a
                     href="https://www.nist.gov/artificial-intelligence/artificial-intelligence-safety-institute/aisic-members"
-                    target="_blank">members</a>]</p>
+                    target="_blank">members</a>]
+                </p>
                 <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> got elected
                   to the Student Committee of the AAAI - the international Association for the Advancement of
                   Artificial Intelligence!</p>
@@ -156,8 +201,10 @@
               <div class="newsjournal-content">
                 <p><a href="https://www.linkedin.com/in/rushil-thareja-a80400179/" target="_blank">Rushil Thareja</a>
                   is joining us as a new Ph.D. student.</p>
-                <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha Valluru</a> will present a demo
-                  paper at <a href="https://cods-comad.in/">CODS-COMAD 2024</a> conference (Group recommendation). We are also co-organizing the tutorial track for the conference.</p>
+                <p><a href="https://www.linkedin.com/in/likitha9/" target="_blank">Likitha Valluru</a> will present a
+                  demo
+                  paper at <a href="https://cods-comad.in/">CODS-COMAD 2024</a> conference (Group recommendation). We
+                  are also co-organizing the tutorial track for the conference.</p>
               </div>
             </div>
 
@@ -170,9 +217,11 @@
             <div class="newsjournal-item">
               <div class="newsjournal-month">December</div>
               <div class="newsjournal-content">
-                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> will present a paper at
+                <p><a href="https://vishalpallagani.github.io/" target="_blank">Vishal Pallagani</a> will present a
+                  paper at
                   Neurips 2023 workshop on Generalized Planning (LLMs and Planning).</p>
-                <p><a href="https://sites.google.com/site/biplavsrivastava/" target="_blank">Biplav Srivastava</a> will participate
+                <p><a href="https://sites.google.com/site/biplavsrivastava/" target="_blank">Biplav Srivastava</a>
+                  will participate
                   with two posters at Americal Geophysical Union (AGU) (AI and water).</p>
                 <!-- Additional news items for December 2023... -->
               </div>
@@ -182,7 +231,8 @@
             <div class="newsjournal-item">
               <div class="newsjournal-month">November</div>
               <div class="newsjournal-content">
-                <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> is presenting one paper each at IEEE
+                <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> is presenting one paper
+                  each at IEEE
                   TPS and ACM AI and Finance (ICAIF) conferences (AI trust).</p>
               </div>
             </div>
@@ -197,7 +247,8 @@
             <div class="newsjournal-item">
               <div class="newsjournal-month">May</div>
               <div class="newsjournal-content">
-                <p><a href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/" target="_blank">Sai Teja Paladi</a>
+                <p><a href="https://www.linkedin.com/in/sai-teja-paladi-52a062140/" target="_blank">Sai Teja
+                    Paladi</a>
                   graduated with a Master's degree in Computer Science. He helped our team in developing and deploying
                   various tools.</p>
               </div>
@@ -205,7 +256,8 @@
             <div class="newsjournal-item">
               <div class="newsjournal-month">April</div>
               <div class="newsjournal-content">
-                <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> secured the best graduate
+                <p><a href="https://kausik-l.github.io/" target="_blank">Kausik Lakkaraju</a> secured the best
+                  graduate
                   student poster presentation award in the Computer Science department for his work on 'Rating of AI
                   Systems through a Causal Lens' at the <a
                     href="https://www.sc.edu/about/signature_events/discover_uofsc/about/news/2023/20220428_Check_Out_DUSC_2023.php"
