Update traffic page with paper link

--- a/projects/traffic_page/index.html
+++ b/projects/traffic_page/index.html
@@ -132,8 +132,11 @@
                             <div style="flex: 1; text-align: center; border-right: 2px solid black; padding-right: 20px;">
                                 <a href="https://ai4society.github.io/Traffic-Data-Analysis/" target="_blank" style="text-decoration: underline; color: #0066cc;">Demo Link</a>
                             </div>
-                            <div style="flex: 1; text-align: center; padding-left: 20px;">
+                            <div style="flex: 1; text-align: center; border-right: 2px solid black">
                                 <a href="./traffic-slides.pdf" target="_blank" style="text-decoration: underline; color: #0066cc;">Slides Link</a>
+                            </div>
+                            <div style="flex: 1; text-align: center; padding-left: 20px;">
+                              <a href="./traffic-paper.pdf" target="_blank" style="text-decoration: underline; color: #0066cc;">Paper Link</a>
                             </div>
                         
                         </div>
