--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
                           for more details.</p>
                       </div>
                     </div>
+
+                    <!-- Sept 2024 -->
+                    <div class="timeline-item">
+                      <div class="timeline-dot"></div>
+                      <div class="timeline-date month">September</div>
+                      <div class="timeline-content">
+                        <p><a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a> started his internship at <a target="_blank" href="https://www.mayoclinic.org/">Mayo Clinic</a> (Sep - Dec 2024)</p>
+                      </div>
+                    </div>
                   </div>
 
                   </div>
