InfoSpread project page update

--- a/projects/InfoSpread/index.html
+++ b/projects/InfoSpread/index.html
@@ -59,6 +59,9 @@
                   
                       <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:psGtaNc-H44J:scholar.google.com/&output=citation&scisdr=ClH8TahuEOnEo3iUe9k:AFWwaeYAAAAAZsySY9m_VkkZAY8VHu2A-E_Vn4U&scisig=AFWwaeYAAAAAZsySYxKkLZ2FvwoamhtSNpTnkPo&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1" target="_blank" type="text/plain">[BibTex]</a>
                     </li>
+
+                    <li>Modeling and Steering Multi-Dimensional Opinion Networks with Aggregated Measurements<br><i>Vignesh Narayanan, Bharath Muppasani, Sai Teja Paladi, Biplav Srivastava, Michael Huhns</i><br>2023 SIAM Conference on Dynamical Systems, May 2023. [Information spread, Dynamical Systems, Abstract]</li>
+                    <li>Securing social media for seniors from information attacks: Modeling, detecting, intervening, and communicating risks<br><i>Vignesh Narayanan, Brett W. Robertson, Andrea Hickerson, Biplav Srivastava and Bryant W. Smith</i><br>The Third IEEE International Conference on Cognitive Machine Intelligence (IEEE CogMI), 2021. [Cyberspace, Seniors, Conference]</li>
                   </ul>
                   <tr style="padding:0px">
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
