infoSpread project page update

--- a/demos/index.html
+++ b/demos/index.html
@@ -114,7 +114,7 @@
           </div>
           <div style="flex:1">
             <h3 class="card-text">Expressive and Flexible Simulation of Information Spread Strategies in Social Networks
-              Using Planning | AAAI 2024 <span class="tag tag-method">Automated Planning</span></h3>
+              Using Planning | AAAI 2024 <span class="tag tag-method">Automated Planning</span>  <span class="best-demo-badge">Best Demo at AAAI-24</span></h3>
             <p>We present a demonstration of integrating Automated Planning with opinion dynamics, enabling users to
               visualize, simulate, and strategically influence opinion evolution in networks. This approach offers a
               practical solution for understanding and guiding information spread.</p>
