--- a/projects/index.html
+++ b/projects/index.html
@@ -221,7 +221,7 @@
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
                         <h3 style="display:flex;align-items:center;">
                             <span style="background-color:hsl(15, 77%, 51%);height:15px;width:15px;margin-right:10px;border:1px solid black;"></span>
-                            Planning in Opinion Networks
+                            Opinion Network for Online User Safety
 
                             <!-- <span class="tag tag-method">Time-Series</span> -->
                             <span class="tag tag-method">Planning</span>
