InfoSpread project page update

--- a/projects/InfoSpread/index.html
+++ b/projects/InfoSpread/index.html
@@ -56,15 +56,23 @@
                         <img src="images/InfoSpreadDemo.png" style="max-width:80%; display: block; margin: 0 auto;">
                     </td>
                   </tr>
+                  <tr style="padding:0px"></tr>
+                    <td style="padding-left:2.5%;width:63%;vertical-align:middle">
+                        <img src="images/ICS_world.png" style="max-width:80%; display: block; margin: 0 auto;">
+                    </td>
+                  </tr>
               </td> 
             </tr>
-
+            <tr>
+              <td colspan="100%" style=" border-bottom: 1px solid #ccc;"></td>
+            </tr>
             <tr style="padding:0px">
               <td style="padding-left:2.5%;width:63%;vertical-align:middle">   
                   
-                  <p style="text-align: justify; font-size: 16px;"><span style="background-color: hsla(15, 77%, 51%, 0.36);"><b>Simulation & Control</b></span> </p>
-                  <!-- <p><i><b>Authors: </b>Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns</i></p>
-                   -->
+                  <p style="text-align: justify; font-size: 16px;"><span style="background-color: hsla(15, 77%, 51%, 0.36);"><b>Securing for Seniors</b></span> </p>
+                  <p style="text-align: justify;">In this increasingly global and digitally connected society, we learn and interact with the world and gather information to make decisions by acquiring, processing, and curating digital data shared through cyberspace. While enabling timely distribution of digital data and facilitating rich social interfaces, cyberspace also comes with many vulnerabilities, e.g., manipulated digital data and misinformation that may adversely impact the user and their decision-making process. Although the need for connectivity and social belonging is universal, the segments of society which would benefit the most include children, who are learning about the world, and older adults - typically 65 years or above and referred to as seniors, who cherish old personal relationships. But they are also an extremely vulnerable group to potential cyber-attacks and phishing. In this paper, we lay out some of the current challenges to ensuring safe cyberspace for senior adults, who can be misguided to cause irreparable personal, financial or physical harm to themselves or others through misinformation, and the research opportunities to turn the corner.</p>
+                  
+
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
                     <li>Securing social media for seniors from information attacks: Modeling, detecting, intervening, and communicating risks<br><i><b>Authors: </b>Vignesh Narayanan, Brett W. Robertson, Andrea Hickerson, Biplav Srivastava and Bryant W. Smith</i><br>The Third IEEE International Conference on Cognitive Machine Intelligence (IEEE CogMI), 2021. [Cyberspace, Seniors, Conference]</li>
