added NeurIPS publication

--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">September</div>
                       <div class="timeline-content">
-                        <p><a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a> started his internship at <a target="_blank" href="https://www.mayoclinic.org/">Mayo Clinic</a> (Sep - Dec 2024)</p>
+                        <p>Our <a href='./publications/papers_local/Neurips_2024_final.pdf' target="_blank">paper</a>, 'Towards Effective Planning Strategies for Dynamic Opinion Networks' is accepted at <a target="_blank" href="https://neurips.cc/Conferences/2024">Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS), Vancouver, 2024</a> for poster presentation.</p>
+                        <p><a target="_blank" href="https://kausik-l.github.io/">Kausik Lakkaraju</a> started his internship at <a target="_blank" href="https://www.mayoclinic.org/">Mayo Clinic</a> (Sep - Dec 2024).</p>
                       </div>
                     </div>
                   </div>
