--- a/projects/InfoSpread/index.html
+++ b/projects/InfoSpread/index.html
@@ -40,7 +40,12 @@
                   
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
-                    <li>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning <span class="best-demo-badge">Best Demo at AAAI-24</span><br><i><b>Authors: </b>Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns</i> <br> 
+                    <li>Towards Effective Planning Strategies for Dynamic Opinion Networks<br><i><b>Authors: </b>Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava, Michael Huhns</i> <br>
+                      <i>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS), Vancouver, 2024 [Info Spread, Planning, AR=25.8%]</i><br> 
+                      <a href='../../publications/papers_local/Neurips_2024_final.pdf' target="_blank">[Paper]</a>
+                    </li>
+                    
+                    <li>Expressive and Flexible Simulation of Information Spread Strategies in Social Networks Using Planning <span class="best-demo-badge">Best Demo at AAAI-24</span><br><i><b>Authors: </b>Bharath Muppasani, Vignesh Narayanan, Biplav Srivastava, Michael N. Huhns</i> <br><i>Proceedings of the Thirty-Eighth Annual Conference of Association for Advancement of Artificial Intelligence - Demonstrations Track (AAAI-24 Demo)</i><br> 
                       <a href='../../publications/papers_local/InfoSpread_AAAI24_Demo.pdf' target="_blank">[Paper]</a>
                       <a href="../../publications/papers_local/AAAI-24_Demo_Poster.pdf" target="_blank">[Poster]</a>
                       <a href="https://drive.google.com/file/d/19d65zjSoFBSngCIPrteT0_DOlymmkEiM/view?usp=drive_link"
@@ -49,7 +54,7 @@
                       <a href="https://scholar.googleusercontent.com/scholar.bib?q=info:psGtaNc-H44J:scholar.google.com/&output=citation&scisdr=ClH8TahuEOnEo3iUe9k:AFWwaeYAAAAAZsySY9m_VkkZAY8VHu2A-E_Vn4U&scisig=AFWwaeYAAAAAZsySYxKkLZ2FvwoamhtSNpTnkPo&scisf=4&ct=citation&cd=-1&hl=en&scfhb=1" target="_blank" type="text/plain">[BibTex]</a>
                     </li>
 
-                    <li>Modeling and Steering Multi-Dimensional Opinion Networks with Aggregated Measurements<br><i><b>Authors: </b>Vignesh Narayanan, Bharath Muppasani, Sai Teja Paladi, Biplav Srivastava, Michael Huhns</i><br>2023 SIAM Conference on Dynamical Systems, May 2023. [Information spread, Dynamical Systems, Abstract]</li>
+                    <li>Modeling and Steering Multi-Dimensional Opinion Networks with Aggregated Measurements<br><i><b>Authors: </b>Vignesh Narayanan, Bharath Muppasani, Sai Teja Paladi, Biplav Srivastava, Michael Huhns</i><br><i>2023 SIAM Conference on Dynamical Systems, May 2023. [Information spread, Dynamical Systems, Abstract]</i></li>
                   </ul>
                   <tr style="padding:0px">
                     <td style="padding-left:2.5%;width:63%;vertical-align:middle">
@@ -75,7 +80,7 @@
 
                   <p><i><b>Representative Publications</b></i></p>
                   <ul>
-                    <li>Securing social media for seniors from information attacks: Modeling, detecting, intervening, and communicating risks<br><i><b>Authors: </b>Vignesh Narayanan, Brett W. Robertson, Andrea Hickerson, Biplav Srivastava and Bryant W. Smith</i><br>The Third IEEE International Conference on Cognitive Machine Intelligence (IEEE CogMI), 2021. [Cyberspace, Seniors, Conference]</li>
+                    <li>Securing social media for seniors from information attacks: Modeling, detecting, intervening, and communicating risks<br><i><b>Authors: </b>Vignesh Narayanan, Brett W. Robertson, Andrea Hickerson, Biplav Srivastava and Bryant W. Smith</i><br><i>The Third IEEE International Conference on Cognitive Machine Intelligence (IEEE CogMI), 2021. [Cyberspace, Seniors, Conference]</i></li>
                   </ul>
               </td> 
             </tr>
