--- a/publications/index.html
+++ b/publications/index.html
@@ -58,6 +58,8 @@
                                 <p>Trust Rating</p>
                                 <p>Chatbots</p>
                                 <p>Neuro-Symbolic AI</p>
+                                <p>Dynamical Systems</p>
+                                <p>Reinforcement Learning</p>
                             </div>
                         </div>
                         <div class="legend-item">
@@ -82,6 +84,16 @@
 
                         <h2>2024</h2>
                         <ul class="papers-list">
+
+                            <li><b>Towards Effective Planning Strategies for Dynamic Opinion Networks</b>
+                                </i><br>
+                                <i>Thirty-eighth Annual Conference on Neural Information Processing Systems (NeurIPS), Vancouver, 2024 [Info Spread, Planning, AR=25.8%]</i><br>
+                                Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava, Michael Huhns
+                                <br>
+                                <a href='./papers_local/Neurips_2024_final.pdf' target="_blank">[Paper]</a>
+                                <span class="tag tag-method">Dynamical Systems</span>
+                                <span class="tag tag-method">Reinforcement Learning</span>
+                                <br>
 
                             <li><b>AI-Assisted Research Collaboration with Open Data for Fair and Effective
                                     Response to Call for Proposals</b>
