added ElectionBot-SC in Demo page

--- a/demos/index.html
+++ b/demos/index.html
@@ -55,6 +55,24 @@
 
         <div style="display:flex;justify-content: center;gap:15px;">
           <div style="flex:0.8">
+            <iframe width="300" height="200"
+              src="https://drive.google.com/file/d/1_5hdy4yy7Wm8hCAp4W12bq_2iL5zxEAk/preview"
+              title="Demo of ElectionBot-SC"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen></iframe>
+          </div>
+          <div style="flex:1">
+            <h3 class="card-text">ElectionBot-SC: A Tool to Understand and Compare Chatbot Behavior for Safe Election Information in South Carolina | 2024 <span class="tag tag-method">Chatbots</span> </h3>
+            <p>We present ElectionBot-SC, a tool designed to provide reliable and accessible election information, featuring three response engines: SafeChat (explained below), Google Search, and a free-tier Large Language Model (LLM): Mixtral 8x7b.</p>
+            <a href="../publications/papers_local/AAAI_25_SafeChat_Demo.pdf" target="_blank" rel="noopener noreferrer">[Paper]</a>
+            <a href="https://drive.google.com/file/d/1_5hdy4yy7Wm8hCAp4W12bq_2iL5zxEAk/view" target="_blank">[Demo Video]</a>
+          </div>
+        </div>
+        <br><br>
+
+        <div style="display:flex;justify-content: center;gap:15px;">
+          <div style="flex:0.8">
             <img src="../projects/llm_page/images/election_qa.png" alt="Traffic Analysis GIF" style="width:280px; height:200px; border-radius: 10px;">
           </div>
           <div style="flex:1">
