--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                     </div>
 
                     <div class="mySlides">
+                      <img src="images/techninlaw_oct2024.jpg" style="width:100%">
+                      <div class="caption">ElectionBot-SC Demo at TechInLaw AIElection '24</div>
+                    </div>
+                    
+                    <div class="mySlides">
                       <img src="images/team_2023_spring.jpg" style="width:100%">
                       <div class="caption">Team Lunch - Spring '23</div>
                     </div>
